# vcross

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/vcross/: vcross.hpp
test/: CMakeLists.txt
test/src/: main.cpp
